--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "set NODE_ENV=Production&& node server.js ",
+    "dev" :"set NODE_ENV=Development&& nodemon server.js"
   },
   "keywords": [],
   "author": "",
